Display user list in the table, the users have been acquired from service-a.

--- a/service-b/src/main/resources/templates/index.html
+++ b/service-b/src/main/resources/templates/index.html
@@ -1,13 +1,28 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="utf-8"></meta>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Hello World</title>
+    <title>Service-B</title>
 </head>
 
 <body>
-<h1>Hello World</h1>
+<h1>User List</h1>
+<table border="1" style="width:500px">
+    <tr>
+        <td>#</td>
+        <td style="width:70%">Name</td>
+        <td>Country</td>
+    </tr>
+    <tr th:each="user: ${users}">
+        <td th:text="${user.id}" />
+        <td th:text="${user.name}" />
+        <td th:text="${user.country}" />
+    </tr>
+</table>
 </body>
 
 </html>
